--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,48 @@ div#content aside {
     width: 20vw;
 }
 
+header {
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+}
+
+header h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+nav {
+display: inherit;
+align-items: center;
+border-top: 1px solid var(--dark-foregound-color);
+border-bottom: 1px solid var(--dark-foregound-color);
+height: 40px;
+
+}
+
+nav ul {
+
+    padding-left: calc(var(--general-padding) / 2);
+
+}
+
+nav li {
+
+    display: inline-block;
+    width: 5em;
+    margin-right: var(--general-margin);
+}
+
+div#container {
+
+    display: flex;
+    flex-direction: column;
+    margin: var(--general-margin);
+}
+
+
+
 article {
     flex: 33.33%;
 }
@@ -84,3 +126,24 @@ article div img {
     object-fit: cover;
     object-position: center;
 }
+
+aside {
+
+    padding: var(--general-padding);
+    padding-top: calc(var(--general-padding));
+}
+
+footer {
+
+    background-color: var(--dark-background-color);
+    display: inherit;
+    justify-content: center;
+    align-items: center;
+    height: 150px;
+}
+
+footer p {
+
+    color: var(--light-background-color);
+}
+
